--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div class="company-info">
         <ul class="footer-list">
            <li class="footer-item">
-            <a href="" class="footer-link">Privacy Policy</a>
+            <a href="/pages/privacy.html" class="footer-link">Privacy Policy</a>
           </li>
         </ul>
       </div>
