--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <a href="mailto:yourbubblepop@gmail.com" class="footer-link">Contact Us</a>
           </li>
           <li class="footer-item">
-            <a href="" class="footer-link">Terms of Use</a>
+            <a href="/pages/termsofuse.html" class="footer-link">Terms of Use</a>
           </li>
         </ul>
       </div>
